--- a/Aula01/Exemploapp/MainWindow.xaml
+++ b/Aula01/Exemploapp/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Exemploapp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="150" Width="300">
     <Grid>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-1.446,-0.173" Click="Button_Click"/>
 
     </Grid>
 </Window>
