--- a/Aula03/RetanguloApp/MainWindow.xaml
+++ b/Aula03/RetanguloApp/MainWindow.xaml
@@ -5,8 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RetanguloApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Retângulo" Height="200" Width="300">
     <Grid>
+        <GroupBox Header="Área e Diagonal">
+            <Grid>
+                <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" Text="Base" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <TextBlock HorizontalAlignment="Left" Margin="144,10,0,0" Text="Altura" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <Button Content="calcular" HorizontalAlignment="Center" Margin="0,61,0,0" VerticalAlignment="Top" Width="268" Click="Button_Click"/>
+                <TextBlock HorizontalAlignment="Left" Margin="10,81,0,0" Text="Área" TextWrapping="Wrap" VerticalAlignment="Top" Width="129"/>
+                <TextBlock HorizontalAlignment="Left" Margin="144,81,0,0" Text="Diagonal" TextWrapping="Wrap" VerticalAlignment="Top" Width="100"/>
+                <TextBox Name="txtArea" HorizontalAlignment="Left" Margin="10,102,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <TextBox Name="txtDiagonal" HorizontalAlignment="Left" Margin="144,102,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <TextBox Name="txtBase" HorizontalAlignment="Left" Margin="10,31,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+                <TextBox Name="txtAltura" HorizontalAlignment="Left" Margin="144,31,0,0" Text="" TextWrapping="Wrap" VerticalAlignment="Top" Width="134"/>
+            </Grid>
+        </GroupBox>
 
     </Grid>
 </Window>
