--- a/EscolaApp/EscolaApp/DiarioWindow.xaml
+++ b/EscolaApp/EscolaApp/DiarioWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:EscolaApp"
         mc:Ignorable="d"
-        Title="DiarioWindow" Height="200" Width="300">
+        Title="Diario da turma" Height="270" Width="400">
     <Grid>
-        
+        <ListBox Name="listTurmas" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0" Width="370" Height="90"/>
+        <ListBox Name="listAlunos" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,105,0,0" Width="370" Height="90"/>
+        <Button Click="ListarClick" Content="Listar" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.025,0.119"/>
     </Grid>
 </Window>
