--- a/ProjetoFinal/Locacao/MainWindow.xaml
+++ b/ProjetoFinal/Locacao/MainWindow.xaml
@@ -5,8 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Locacao"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="200" Width="400">
     <Grid>
+        <Button Click="Cliente_click" Content="Cadastrar Cliente" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <Button Click="Veiculo_click" Content="Cadastrar Veiculo" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.143,-0.332"/>
+        <Button Click="Veiculo_click" Content="Locação" HorizontalAlignment="Left" Margin="10,92,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.143,-0.332"/>
+
 
     </Grid>
 </Window>
