--- a/ProjetoFinal/Locacao/DiarioWindow.xaml
+++ b/ProjetoFinal/Locacao/DiarioWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Locacao"
         mc:Ignorable="d"
-        Title="DiarioWindow" Height="450" Width="800">
+        Title="DiarioWindow" Height="300" Width="400">
     <Grid>
-        
+        <ListBox Name="list_Locados" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,10,0,0" Width="370" Height="90"/>
+        <ListBox Name="list_Clientes" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,105,0,0" Width="370" Height="90"/>
+        <Button Click="ListarClick" Content="Listar" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.025,0.119"/>
     </Grid>
 </Window>
